--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-streamlit>=1.24.0
-pytest==7.4.3
-pytest-cov==4.1.0
-coverage==7.3.2
-pytest-html==4.1.1
-pandas>=2.0.0
-numpy>=1.24.0
-dask>=2023.5.0
-plotly>=5.14.0
-openpyxl>=3.1.2
+# requirements.txt
+streamlit==1.42.0
+pandas==2.2.3
+numpy==1.25.2
+dask
+plotly==5.14.0
+openpyxl==3.1.2
+ydata-profiling==4.5.1
