--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 streamlit>=1.24.0
-pytest==7.4.3
-pytest-cov==4.1.0
+pandas>=1.5.0
+numpy>=1.23.0
+dask>=2023.3.0
+plotly>=5.13.0
+openpyxl>=3.1.0
+fpdf>=1.7.2
+prometheus-client>=0.16.0
+pytest>=7.3.1
+pytest-cov>=4.0.0
 coverage==7.3.2
 pytest-html==4.1.1
-pandas>=2.0.0
-numpy>=1.24.0
-dask>=2023.5.0
-plotly>=5.14.0
-openpyxl>=3.1.2
-fpdf>=1.7.2
+pytest-mock>=3.10.0
